fix order list left alignment

--- a/packages/admin-ui/src/pages/system/components/App/pwaInstallCards.scss
+++ b/packages/admin-ui/src/pages/system/components/App/pwaInstallCards.scss
@@ -63,6 +63,10 @@
       justify-content: center;
       text-align: center;
       padding: 20px;
+
+      ol {
+        text-align: left;
+      }
     }
   }
 }
